--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,17 +1,18 @@
 server {
-    listen 80;
-    server_name _;
+    listen *:80;
     server_tokens off;
-    client_max_body_size 10m;
+    client_max_body_size 20M;
 
     location /static/admin/ {
         autoindex on;
         root /var/html/;
+        client_max_body_size 20M;
     }
 
     location /media/ {
         autoindex on;
         root /var/html/;
+        client_max_body_size 20M;
     }
 
     location /static/rest_framework/ {
@@ -23,11 +24,13 @@ server {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
     location /api/ {
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Server $host;
         proxy_pass http://backend:8000;
+        client_max_body_size 20M;
     }
 
     location /admin/ {
@@ -46,9 +49,9 @@ server {
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
       }
+
       error_page   500 502 503 504  /50x.html;
       location = /50x.html {
         root   /var/html/frontend/;
       }
-
 }
