--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@
           run: |
             python -m pip install --upgrade pip 
             pip install flake8==6.0.0 flake8-isort==6.0.0
-            pip install -r ./backend/requirements.txt
+            pip install -r ./backend/foodgram/requirements.txt
 
         - name: Test with flake8
           env:
