--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,110 +6,49 @@
       runs-on: ubuntu-latest
       strategy:
         matrix:
-          python-version: [ "3.8", "3.9", "3.10" ]
-      services:
-        postgres:
-          image: postgres:13.10
-          env:
-            POSTGRES_USER: django_user
-            POSTGRES_PASSWORD: django_password
-            POSTGRES_DB: django_db
-          ports:
-            - 5432:5432
-          options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+          python-version: [ "3.7", "3.8", "3.9" ]
 
       steps:
-        - name: Check out code
-          uses: actions/checkout@v3
-
-        - name: Set up Python ${{ matrix.python-version }}
-          uses: actions/setup-python@v4
+        - uses: actions/checkout@v2
+        - name: Set up Python
+          uses: actions/setup-python@v2
           with:
             python-version: ${{ matrix.python-version }}
 
         - name: Install dependencies
           run: |
-            python -m pip install --upgrade pip 
-            pip install flake8==6.0.0 flake8-isort==6.0.0
-            pip install -r ./backend/foodgram/requirements.txt
-
-        - name: Test with flake8
-          env:
-            POSTGRES_USER: django_user
-            POSTGRES_PASSWORD: django_password
-            POSTGRES_DB: django_db
-            DB_HOST: 127.0.0.1
-            DB_PORT: 5432
-
+            python -m pip install --upgrade pip
+            pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
+            cd backend/
+            pip install -r requirements.txt
+        - name: Test with flake8 and django tests
           run: |
-            python -m flake8 backend/
-            
-    frontend_tests:
-      runs-on: ubuntu-latest
-      steps:
-      - uses: actions/checkout@v3
-      - name: Set up nodeJS
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
+            python -m flake8
 
-      - name: Install dependencies
-        run: |
-          cd frontend/
-          npm ci
-
-      - name: Test frontend
-        run: |
-          cd frontend/
-          npm run test
-
-    build_backend_and_push_to_docker_hub:
-      name: Push backend Docker image to DockerHub
+    build_and_push_to_docker_hub:
+      name: Push Docker image to Docker Hub
       runs-on: ubuntu-latest
       needs: tests
-      if: github.ref_name == 'main'
       steps:
         - name: Check out the repo
-          uses: actions/checkout@v3
-
+          uses: actions/checkout@v2
         - name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v2
-
+          uses: docker/setup-buildx-action@v1
         - name: Login to Docker
-          uses: docker/login-action@v2
+          uses: docker/login-action@v1
           with:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }}
-
-        - name: Push to DockerHub
-          uses: docker/build-push-action@v4
+        - name: Push backend to Docker Hub
+          uses: docker/build-push-action@v2
           with:
-            context: ./backend/
+            context: backend/
             push: true
             tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
-
-    build_frontend_and_push_to_docker_hub:
-      name: Push frontend Docker image to DockerHub
-      runs-on: ubuntu-latest
-      needs: tests
-      if: github.ref_name == 'main'
-      steps:
-        - name: Check out the repo
-          uses: actions/checkout@v3
-
-        - name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v2
-
-        - name: Login to Docker
-          uses: docker/login-action@v2
+        - name: Push frontend to Docker Hub
+          uses: docker/build-push-action@v2
           with:
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PASSWORD }}
-
-        - name: Push to DockerHub
-          uses: docker/build-push-action@v4
-          with:
-            context: ./frontend/
+            context: frontend/
             push: true
             tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
 
