--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@
             pip install -r ./backend/foodgram/requirements.txt
         - name: Test with flake8
           run: |
+            python isort .
             python -m flake8
 
     build_and_push_to_docker_hub:
