--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,12 +17,12 @@
 
         - name: Install dependencies
           run: |
-            python -m pip install --upgrade pip 
-            pip install flake8==6.0.0 flake8-isort==6.0.0
-            pip install -r ./backend/foodgram/requirements.txt
+            python -m pip install --upgrade pip
+            pip install flake8 flake8-isort
+            cd backend/foodgram
+            pip install -r requirements.txt
         - name: Test with flake8
           run: |
-            python isort .
             python -m flake8
 
     build_and_push_to_docker_hub:
