--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,32 +25,55 @@
           run: |
             python -m flake8
 
-    build_and_push_to_docker_hub:
-      name: Push Docker image to Docker Hub
+    build_backend_and_push_to_docker_hub:
+      name: Push backend Docker image to DockerHub
       runs-on: ubuntu-latest
       needs: tests
+      if: github.ref_name == 'main'
       steps:
         - name: Check out the repo
-          uses: actions/checkout@v2
+          uses: actions/checkout@v3
+
         - name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v1
+          uses: docker/setup-buildx-action@v2
+
         - name: Login to Docker
-          uses: docker/login-action@v1
+          uses: docker/login-action@v2
           with:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }}
-        - name: Push backend to Docker Hub
-          uses: docker/build-push-action@v2
+
+        - name: Push to DockerHub
+          uses: docker/build-push-action@v4
           with:
-            context: backend/
+            context: ./backend/foodgram
             push: true
             tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
-        - name: Push frontend to Docker Hub
-          uses: docker/build-push-action@v2
+
+    build_frontend_and_push_to_docker_hub:
+      name: Push frontend Docker image to DockerHub
+      runs-on: ubuntu-latest
+      needs: tests
+      if: github.ref_name == 'main'
+      steps:
+        - name: Check out the repo
+          uses: actions/checkout@v3
+
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v2
+
+        - name: Login to Docker
+          uses: docker/login-action@v2
           with:
-            context: frontend/
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PASSWORD }}
+
+        - name: Push to DockerHub
+          uses: docker/build-push-action@v4
+          with:
+            context: ./frontend/
             push: true
-            tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
+            tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
 
 
   
