--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@
       name: Push frontend Docker image to DockerHub
       runs-on: ubuntu-latest
       needs: tests
-      if: github.ref_name == 'master'
+      if: github.ref_name == 'main'
       steps:
         - name: Check out the repo
           uses: actions/checkout@v3
@@ -75,5 +75,42 @@
             push: true
             tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
 
+    deploy:
+      runs-on: ubuntu-latest
+      needs:
+        - build_backend_and_push_to_docker_hub
+        - build_frontend_and_push_to_docker_hub
+      steps:
+        - name: Checkout repo
+          uses: actions/checkout@v3
+        - name: executing remote ssh commands to deploy
+          uses: appleboy/ssh-action@master
+          with:
+            host: ${{ secrets.HOST }}
+            username: ${{ secrets.USER }}
+            key: ${{ secrets.SSH_KEY }}
+            passphrase: ${{ secrets.PASSPHRASE }}
+            script: |
+              sudo docker pull {{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
+              sudo docker-compose stop
+              sudo docker-compose rm -f backend
+              rm .env
+              touch .env
+              echo TOKEN=${{ secrets.TOKEN }} >> .env
+              echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+              echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+              echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+              echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+              echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+              sudo docker-compose up -d --build
 
-  
+    send_message:
+      runs-on: ubuntu-latest
+      needs: deploy
+      steps:
+        - name: send message
+          uses: appleboy/telegram-action@master
+          with:
+            to: ${{ secrets.TELEGRAM_TO }}
+            token: ${{ secrets.TELEGRAM_TOKEN }}
+            message: ${{ github.workflow }} успешно выполнен!
