--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@
       name: Push backend Docker image to DockerHub
       runs-on: ubuntu-latest
       needs: tests
-      if: github.ref_name == 'main'
+      if: github.ref_name == 'master'
       steps:
         - name: Check out the repo
           uses: actions/checkout@v3
@@ -54,7 +54,7 @@
       name: Push frontend Docker image to DockerHub
       runs-on: ubuntu-latest
       needs: tests
-      if: github.ref_name == 'main'
+      if: github.ref_name == 'master'
       steps:
         - name: Check out the repo
           uses: actions/checkout@v3
