--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,19 +81,6 @@
         - build_backend_and_push_to_docker_hub
         - build_frontend_and_push_to_docker_hub
       steps:
-        - name: Checkout repo
-          uses: actions/checkout@v3
-
-        - name: Copy docker-compose.yml via ssh
-          uses: appleboy/scp-action@master
-          with:
-            host: ${{ secrets.HOST }}
-            username: ${{ secrets.USER }}
-            key: ${{ secrets.SSH_KEY }}
-            passphrase: ${{ secrets.SSH_PASSPHRASE }}
-            source: "docker-compose.yml"
-            target: "foodgram"
-
         - name: Executing remote ssh commands to deploy
           uses: appleboy/ssh-action@master
           with:
@@ -102,20 +89,19 @@
             key: ${{ secrets.SSH_KEY }}
             passphrase: ${{ secrets.PASSPHRASE }}
             script: |
-              cd foodgram
+              cd infra
+              sudo docker-compose down
+              sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
+              sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
               rm .env
               touch .env
-              echo TOKEN=${{ secrets.TOKEN }} >> .env
+              echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
               echo DB_NAME=${{ secrets.DB_NAME }} >> .env
               echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
               echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
               echo DB_HOST=${{ secrets.DB_HOST }} >> .env
               echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-              sudo docker compose -f docker-compose.yml pull
-              sudo docker compose -f docker-compose.yml down
-              sudo docker-compose up -d --build
-              sudo docker compose -f docker-compose.yml exec backend python manage.py migrate
-              sudo docker compose -f docker-compose.yml exec backend python manage.py collectstatic
+              sudo docker-compose up -d
 
     send_message:
       runs-on: ubuntu-latest
