--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -113,6 +113,10 @@
               echo DB_HOST=${{ secrets.DB_HOST }} >> .env
               echo DB_PORT=${{ secrets.DB_PORT }} >> .env
               sudo docker-compose up -d
+              sudo docker compose -f docker-compose.yml exec backend python manage.py migrate
+              sudo docker compose -f docker-compose.yml exec backend python manage.py collectstatic
+              sudo docker compose -f docker-compose.yml exec backend python manage.py dataload
+              
 
     send_message:
       runs-on: ubuntu-latest
