--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,21 @@
         matrix:
           python-version: [ "3.8", "3.9", "3.10" ]
 
+      services:
+        postgres:
+          image: postgres:13.10
+          env:
+            POSTGRES_USER: django_user
+            POSTGRES_PASSWORD: django_password
+            POSTGRES_DB: django_db
+          ports:
+            - 5432:5432
+          options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
       steps:
-        - uses: actions/checkout@v2
+        - name: Check out code
+          uses: actions/checkout@v2
+
         - name: Set up Python
           uses: actions/setup-python@v2
           with:
@@ -21,9 +34,18 @@
             pip install flake8 flake8-isort
             cd backend/foodgram
             pip install -r requirements.txt
-        - name: Test with flake8
+
+        - name: Test with flake8 and django
+          env:
+            POSTGRES_USER: django_user
+            POSTGRES_PASSWORD: django_password
+            POSTGRES_DB: django_db
+            DB_HOST: 127.0.0.1
+            DB_PORT: 5432
           run: |
-            python -m flake8
+            python -m flake8 backend/foodgram
+            cd backend/foodgram
+            python manage.py test
 
     build_backend_and_push_to_docker_hub:
       name: Push backend Docker image to DockerHub
