--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -105,6 +105,7 @@
       steps:
         - name: Checkout repo
           uses: actions/checkout@v3
+
         - name: Copy docker-compose.yml via ssh
           uses: appleboy/scp-action@master
           with:
@@ -113,40 +114,41 @@
             key: ${{ secrets.SSH_KEY }}
             passphrase: ${{ secrets.SSH_PASSPHRASE }}
             source: "docker-compose.yml"
-            target: "infra"
-        - name: Executing remote ssh commands to deploy
-          uses: appleboy/ssh-action@master
-          with:
-            host: ${{ secrets.HOST }}
-            username: ${{ secrets.USER }}
-            key: ${{ secrets.SSH_KEY }}
-            passphrase: ${{ secrets.SSH_PASSPHRASE }}
-            script: |
-              cd infra
-              sudo docker-compose down
-              sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
-              sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
-              rm .env
-              touch .env
-              echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
-              echo DB_NAME=${{ secrets.DB_NAME }} >> .env
-              echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
-              echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
-              echo DB_HOST=${{ secrets.DB_HOST }} >> .env
-              echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-              sudo docker-compose up -d
-              sudo docker compose -f docker-compose.yml exec backend python manage.py migrate
-              sudo docker compose -f docker-compose.yml exec backend python manage.py collectstatic
-              sudo docker compose -f docker-compose.yml exec backend python manage.py dataload
+            target: "foodgram"
+
+#        - name: Executing remote ssh commands to deploy
+#          uses: appleboy/ssh-action@master
+#          with:
+#            host: ${{ secrets.HOST }}
+#            username: ${{ secrets.USER }}
+#            key: ${{ secrets.SSH_KEY }}
+#            passphrase: ${{ secrets.SSH_PASSPHRASE }}
+#            script: |
+#              cd infra
+#              sudo docker-compose down
+#              sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
+#              sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
+#              rm .env
+#              touch .env
+#              echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+#              echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+#              echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+#              echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+#              echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+#              echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+#              sudo docker-compose up -d
+#              sudo docker compose -f docker-compose.yml exec backend python manage.py migrate
+#              sudo docker compose -f docker-compose.yml exec backend python manage.py collectstatic
+#              sudo docker compose -f docker-compose.yml exec backend python manage.py dataload
               
 
-    send_message:
-      runs-on: ubuntu-latest
-      needs: deploy
-      steps:
-        - name: send message
-          uses: appleboy/telegram-action@master
-          with:
-            to: ${{ secrets.TELEGRAM_TO }}
-            token: ${{ secrets.TELEGRAM_TOKEN }}
-            message: ${{ github.workflow }} успешно выполнен!
+#    send_message:
+#      runs-on: ubuntu-latest
+#      needs: deploy
+#      steps:
+#        - name: send message
+#          uses: appleboy/telegram-action@master
+#          with:
+#            to: ${{ secrets.TELEGRAM_TO }}
+#            token: ${{ secrets.TELEGRAM_TOKEN }}
+#            message: ${{ github.workflow }} успешно выполнен!
