--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -113,7 +113,7 @@
             username: ${{ secrets.USER }}
             key: ${{ secrets.SSH_KEY }}
             passphrase: ${{ secrets.SSH_PASSPHRASE }}
-            source: "docker-compose.yml"
+            source: "infra/docker-compose.yml"
             target: "foodgram"
 
 #        - name: Executing remote ssh commands to deploy
