--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -106,14 +106,14 @@
         - name: Checkout repo
           uses: actions/checkout@v3
 
-        - name: Copy docker-compose.yml via ssh
+        - name: Copy docker-compose.production.yml via ssh
           uses: appleboy/scp-action@master
           with:
             host: ${{ secrets.HOST }}
             username: ${{ secrets.USER }}
             key: ${{ secrets.SSH_KEY }}
             passphrase: ${{ secrets.SSH_PASSPHRASE }}
-            source: "docker-compose.yml"
+            source: "docker-compose.production.yml"
             target: "foodgram"
 
 #        - name: Executing remote ssh commands to deploy
@@ -137,18 +137,18 @@
 #              echo DB_HOST=${{ secrets.DB_HOST }} >> .env
 #              echo DB_PORT=${{ secrets.DB_PORT }} >> .env
 #              sudo docker-compose up -d
-#              sudo docker compose -f docker-compose.yml exec backend python manage.py migrate
-#              sudo docker compose -f docker-compose.yml exec backend python manage.py collectstatic
-#              sudo docker compose -f docker-compose.yml exec backend python manage.py dataload
+#              sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
+#              sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
+#              sudo docker compose -f docker-compose.production.yml exec backend python manage.py dataload
               
 
-#    send_message:
-#      runs-on: ubuntu-latest
-#      needs: deploy
-#      steps:
-#        - name: send message
-#          uses: appleboy/telegram-action@master
-#          with:
-#            to: ${{ secrets.TELEGRAM_TO }}
-#            token: ${{ secrets.TELEGRAM_TOKEN }}
-#            message: ${{ github.workflow }} успешно выполнен!
+    send_message:
+      runs-on: ubuntu-latest
+      needs: deploy
+      steps:
+        - name: send message
+          uses: appleboy/telegram-action@master
+          with:
+            to: ${{ secrets.TELEGRAM_TO }}
+            token: ${{ secrets.TELEGRAM_TOKEN }}
+            message: ${{ github.workflow }} успешно выполнен!
