--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -146,9 +146,9 @@
       runs-on: ubuntu-latest
       needs: deploy
       steps:
-        - name: send message
+        - name: Send message
           uses: appleboy/telegram-action@master
           with:
             to: ${{ secrets.TELEGRAM_TO }}
             token: ${{ secrets.TELEGRAM_TOKEN }}
-            message: ${{ github.workflow }} успешно выполнен!
+            message: Деплой foodgram успешно выполнен! Выполнил ${{ github.actor }}. Сообщение коммита - ${{ github.event.commits[0].message }}. https://github.com/${{ github.repository }}/commit/${{github.sha}}
