--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -133,7 +133,7 @@
               echo DB_PORT=${{ secrets.DB_PORT }} >> .env
               sudo docker compose -f docker-compose.production.yml pull
               sudo docker compose -f docker-compose.production.yml down
-              sudo docker compose up -d
+              sudo docker compose -f docker-compose.production.yml up -d
               sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
               sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
               sudo docker compose -f docker-compose.production.yml exec backend python manage.py dataload
