--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,8 @@
 
         - name: Set up Docker Buildx
           uses: docker/setup-buildx-action@v2
+          with:
+           -platforms: linux/amd64,linux/arm64
 
         - name: Login to Docker
           uses: docker/login-action@v2
