--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -4,6 +4,7 @@ volumes:
   postgres_data:
   static_value:
   media_value:
+  redoc:
 
 services:
 
@@ -42,8 +43,8 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
       - static_value:/var/html/static/
       - media_value:/var/html/media/
+      - redoc:/usr/share/nginx/html/api/docs/
     depends_on:
       - backend
