--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@
         - name: Set up Docker Buildx
           uses: docker/setup-buildx-action@v2
           with:
-           -platforms: linux/amd64,linux/arm64
+           platforms: linux/amd64,linux/arm64
 
         - name: Login to Docker
           uses: docker/login-action@v2
@@ -85,6 +85,8 @@
 
         - name: Set up Docker Buildx
           uses: docker/setup-buildx-action@v2
+          with:
+            platforms: linux/amd64,linux/arm64
 
         - name: Login to Docker
           uses: docker/login-action@v2
