--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3'
 
 volumes:
   postgres_data:
@@ -17,32 +17,33 @@ services:
   backend:
     container_name: backend_foodgram
     image: rodichevm/foodgram_backend
-    env_file: .env
+    restart: always
     volumes:
-      - static_value:/app/static/
-      - media_value:/app/media/
+      - static_value:/backend/static/
+      - media_value:/backend/media/
     depends_on:
       - db
-    restart: always
+    env_file:
+      - .env
 
   frontend:
     container_name: frontend_foodgram
     image: rodichevm/foodgram_frontend
-    env_file: .env
-    command: cp -r /app/build/. /app/static/
     volumes:
-      - static_value:/app/static/
+      - ../frontend/:/frontend/result_build/
+    depends_on:
+      - db
 
   nginx:
     container_name: nginx_foodgram
     image: nginx:1.19.3
     ports:
-      - "7000:80"
+      - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
+      - ../docs/:/usr/share/nginx/html/api/docs/
       - static_value:/var/html/static/
       - media_value:/var/html/media/
     depends_on:
       - backend
-      - frontend
