--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,17 +95,38 @@
             password: ${{ secrets.DOCKER_PASSWORD }}
 
         - name: Push to DockerHub
-          uses: docker/build-push-action@v4
+          uses: docker/build-push-action@v5
           with:
             context: ./frontend/
             push: true
-            tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
+            tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
+
+    build_gateway_and_push_to_docker_hub:
+      name: Push gateway Docker image to DockerHub
+      runs-on: ubuntu-latest
+      steps:
+        - name: Check out the repo
+          uses: actions/checkout@v3
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v2
+        - name: Login to Docker
+          uses: docker/login-action@v2
+          with:
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PASSWORD }}
+        - name: Push to DockerHub
+          uses: docker/build-push-action@v5
+          with:
+            context: ./infra/
+            push: true
+            tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_gateway:latest
 
     deploy:
       runs-on: ubuntu-latest
       needs:
         - build_backend_and_push_to_docker_hub
         - build_frontend_and_push_to_docker_hub
+        - build_gateway_and_push_to_docker_hub
       steps:
         - name: Checkout repo
           uses: actions/checkout@v3
@@ -129,18 +150,14 @@
             passphrase: ${{ secrets.SSH_PASSPHRASE }}
             script: |
               cd foodgram
-              touch .env
-              echo DB_NAME=${{ secrets.DB_NAME }} >> .env
-              echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
-              echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
-              echo DB_HOST=${{ secrets.DB_HOST }} >> .env
-              echo DB_PORT=${{ secrets.DB_PORT }} >> .env
               sudo docker compose -f docker-compose.production.yml pull
               sudo docker compose -f docker-compose.production.yml down
               sudo docker compose -f docker-compose.production.yml up -d
+              sudo docker compose -f docker-compose.production.yml exec backend python manage.py makemigrations
               sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
               sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
               sudo docker compose -f docker-compose.production.yml exec backend python manage.py dataload
+              sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
               
 
     send_message:
