--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,6 +104,7 @@
     build_gateway_and_push_to_docker_hub:
       name: Push gateway Docker image to DockerHub
       runs-on: ubuntu-latest
+      needs: tests
       steps:
         - name: Check out the repo
           uses: actions/checkout@v3
