--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -158,7 +158,7 @@
               sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
               sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
               sudo docker compose -f docker-compose.production.yml exec backend python manage.py dataload
-              sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
+              sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/static/. /backend_static/static/
               
 
     send_message:
