--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,27 +1,30 @@
 server {
   listen 80;
-  index index.html;
   server_tokens off;
+
+  location /api/docs/ {
+    root /usr/share/nginx/html;
+    try_files $uri $uri/redoc.html;
+  }
 
   location /api/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/api/;
-    client_max_body_size 20M;
   }
+
   location /admin/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/admin/;
-    client_max_body_size 20M;
   }
+
   location /media/ {
     alias /media/;
     client_max_body_size 20M;
   }
+
   location / {
-    alias /static/;
+    proxy_set_header Host $http_host;
+    alias /staticfiles/;
     try_files $uri $uri/ /index.html;
   }
-  error_page   500 502 503 504  /50x.html;
-      location = /50x.html {
-        root   /var/html/frontend/;}
 }
