--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -169,4 +169,4 @@
           with:
             to: ${{ secrets.TELEGRAM_TO }}
             token: ${{ secrets.TELEGRAM_TOKEN }}
-            message: Деплой foodgram успешно выполнен! Выполнил ${{ github.actor }}. Сообщение коммита - ${{ github.event.commits[0].message }}. https://github.com/${{ github.repository }}/commit/${{github.sha}}
+            message: Деплой foodgram успешно выполнен!! Выполнил ${{ github.actor }}. Сообщение коммита - ${{ github.event.commits[0].message }}. https://github.com/${{ github.repository }}/commit/${{github.sha}}
