--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -151,12 +151,19 @@
             passphrase: ${{ secrets.SSH_PASSPHRASE }}
             script: |
               cd foodgram
+              touch .env
+              echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+              echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+              echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+              echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+              echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+              echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+              echo TOKEN=${{ secrets.TOKEN }} >> .env
               sudo docker compose -f docker-compose.production.yml pull
               sudo docker compose -f docker-compose.production.yml down
               sudo docker compose -f docker-compose.production.yml up -d
               sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
               sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
-              sudo docker compose -f docker-compose.production.yml exec backend python manage.py dataload
               sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/static/. /backend_static/static/
               
 
