--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,20 +1,24 @@
 server {
   listen 80;
   server_tokens off;
+  client_max_body_size 20M;
 
   location /api/docs/ {
     root /usr/share/nginx/html;
     try_files $uri $uri/redoc.html;
+    client_max_body_size 20M;
   }
 
   location /api/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/api/;
+    client_max_body_size 20M;
   }
 
   location /admin/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/admin/;
+    client_max_body_size 20M;
   }
 
   location /media/ {
@@ -26,5 +30,6 @@ server {
     proxy_set_header Host $http_host;
     alias /staticfiles/;
     try_files $uri $uri/ /index.html;
+    client_max_body_size 20M;
   }
 }
