--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -3,11 +3,10 @@ server {
   server_tokens off;
   client_max_body_size 20M;
 
-  location /api/docs/ {
-    root /usr/share/nginx/html;
-    try_files $uri $uri/redoc.html;
-    client_max_body_size 20M;
-  }
+  location ~ ^/api/docs/ {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/redoc.html;
+    }
 
   location /api/ {
     proxy_set_header Host $http_host;
@@ -32,4 +31,8 @@ server {
     try_files $uri $uri/ /index.html;
     client_max_body_size 20M;
   }
+  error_page   500 502 503 504  /50x.html;
+      location = /50x.html {
+        root   /var/html/frontend/;
+      }
 }
