--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -3,8 +3,8 @@ server {
   server_tokens off;
   client_max_body_size 20M;
 
-  location ~ ^/api/docs/ {
-        root /usr/share/nginx/html;
+  location /api/docs/ {
+        root /usr/share/nginx/html/api/docs;
         try_files $uri $uri/redoc.html;
     }
 
