--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@
         - name: Install dependencies
           run: |
             python -m pip install --upgrade pip
-            pip install flake8 flake8-isort
+            pip install flake8
             cd backend/foodgram
             pip install -r requirements.txt
 
